--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
-    "connect-mongo": "^5.1.0",
+    "connect-redis": "^8.0.3",
     "csurf": "^1.11.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.0"
   },
   "author": "Your Name",
