--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prod": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "connect-redis": "^8.0.3",
@@ -21,8 +23,9 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.0",
+    "mongoose": "^8.15.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
